jswt-semantics/src/locals/snapshots/jswt_semantics__locals__functions__test__error_on_undefined_variable.snap
---
source: jswt-semantics/src/locals/functions.rs
expression: local

---
LocalSemanticResolver {
    symbols: SymbolTable {
        table: [
            {
                "test": Function(
                    FunctionSignature {
                        params: [],
                        returns: Binding(
                            "void",
                        ),
                    },
                ),
            },
        ],
    },
    bindings: BindingsTable {
        bindings: {},
    },
    errors: [
        VariableNotDefined {
            name: "x",
            span: Span {
                file: "test_error_on_undefined_variable",
                module: "module/test_error_on_undefined_variable",
                start: 39,
                end: 40,
            },
        },
    ],
}
