jswt-semantics/src/locals/snapshots/jswt_semantics__locals__functions__test__function_parameter_redefinition.snap
---
source: jswt-semantics/src/locals/functions.rs
expression: local
---
LocalSemanticResolver {
    symbols: SimpleSymbolTable {
        table: [
            {
                "test": Function(
                    FunctionSignature {
                        params: [
                            Binding(
                                "number",
                            ),
                            Binding(
                                "number",
                            ),
                        ],
                        returns: Binding(
                            "void",
                        ),
                    },
                ),
            },
        ],
    },
    bindings: BindingsTable {
        bindings: {},
    },
    errors: [
        VariableAlreadyDefined {
            name: "x",
            span: Span {
                file: "test_function_parameter_redefinition",
                module: "module/test_function_parameter_redefinition",
                start: 34,
                end: 43,
            },
        },
    ],
}
