jswt-semantics/src/locals/snapshots/jswt_semantics__locals__functions__test__function_parameters_are_in_scope.snap
---
source: jswt-semantics/src/locals/functions.rs
expression: local
---
LocalSemanticResolver {
    symbols: SimpleSymbolTable {
        table: [
            {
                "test": Function(
                    FunctionSignature {
                        params: [
                            Binding(
                                "number",
                            ),
                            Binding(
                                "number",
                            ),
                        ],
                        returns: Binding(
                            "void",
                        ),
                    },
                ),
            },
        ],
    },
    bindings: BindingsTable {
        bindings: {},
    },
    errors: [],
}
